--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="Ko">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
   <title>Junhee's Portfolio</title>
   <meta name= "description" content="Portfolio for soft engineer JunHee"> 
   <meta name="author" content="LJH">
-  <link rel='icon' type="image/png" href="imgs/favicon.png" /> 
+  <link rel='icon' type="image/png" href="imgs/favicon1.png"/> 
   <script src="https://kit.fontawesome.com/46d3d8cf24.js" 
           crossorigin="anonymous">
   </script>
@@ -19,6 +19,32 @@
 </head>
 
 <body>
+  <!-- Navbar -->
+  <nav id="navbar">
+    <div class="navbar_logo">
+      <i class="fas fa-seedling"></i>
+      <a href="#">JunHee</a>
+     </div>
+      <ul class="navbar__menu">
+        <li class="navbar__menu__item">Home</li>
+        <li class="navbar__menu__item">About</li>
+        <li class="navbar__menu__item">Skills</li>
+        <li class="navbar__menu__item">MY Wokr</li>
+        <li class="navbar__menu__item">Testimonial</li>
+        <li class="navbar__menu__item">Contact</li>
+      </ul>
+   </div>
+  </nav>
+  <!-- About -->
+  <section id="about"></section>
+  <!-- Skills -->
+  <section id="skills"></section>
+  <!-- Work -->
+  <section id="work"></section>
+  <!-- Testimonals -->
+  <section id="testimonials"></section>
+  <!-- Contact -->
+  <section id="contact"></section>
   
 </body>
 </html>
