Html(about, logo)

--- a/index.html
+++ b/index.html
@@ -49,7 +49,82 @@
   </section>
 
   <!-- About -->
-  <section id="about"></section>
+  <section id="about">
+    <h1>About me</h1>
+    <p>
+      나의 관한 이야기 작성
+    </p> 
+    <div class="about__majors">
+      <div class="major">
+        <div class="class__icon">
+        <i class="fas fa-desktop"></i>
+         </div>
+        <h2 class="major__title">Front-end</h2>
+        <p class="class__description">
+          HTML, CSS, JavaScript,
+        </p>
+      </div>
+      <div class="major">
+        <div class="class__icon">
+       <i class="fas fa-server"></i>
+       </div>
+        <h2 class="major__title">Back-end</h2>
+        <p class="class__description">
+          Java, Oracle, MySQL, Python, Spring
+        </p>
+      </div>
+      <div class="major">
+        <div class="class__icon">
+        <i class="fas fa-chart-line"></i>
+        </div>
+        <h2 class="major__title">ability</h2>
+        <p class="class__description">
+          positive, loyalty, leadership,
+          <br /> Crisis Coping Ability
+        </p>
+      </div>
+    </div>
+    <div class="about__jobs">
+        <div class="job">
+          <img 
+          src="imgs/jobs/경기대학교.png" 
+          alt="kyonggiuni" 
+          class="job__logo" 
+          />
+          <p class="job__name">경기대학교</p>
+          <p class="job__period">2015.03 - 2019.02</p>
+        </div>
+      <div class="job">
+        <img 
+          src="imgs/jobs/학군단로고.png" 
+          alt="122R" 
+          class="job__logo" 
+          />
+          <p class="job__name">122R ROTC</p>
+          <p class="job__period">2017.03 - 2019.02</p>
+        </div>
+
+        <div class="job">
+        <img 
+          src="imgs/jobs/3사단 로고.png" 
+          alt="3DIV" 
+          class="job__logo" 
+          />
+          <p class="job__name">제 보병 3사단 (육군 중위 전역)</p>
+          <p class="job__period">2019.06 - 2021.06</p>
+        </div>
+
+        <div class="job">
+          <img 
+          src="imgs/jobs/KOSMO.png" 
+          alt="KOSMO" 
+          class="job__logo" 
+          />
+          <p class="job__name">한국소프트웨어인재개발원</p>
+          <p class="job__period">2021.08 - 2022.02</p>
+        </div>
+    </div>
+    </section>
   <!-- Skills -->
   <section id="skills"></section>
   <!-- Work -->
