--- a/index.html
+++ b/index.html
@@ -126,7 +126,94 @@
     </div>
     </section>
   <!-- Skills -->
-  <section id="skills"></section>
+  <section id="skills">
+    <h1>Skills</h1>
+    <h2>Skills & Attributes</h2>
+    <p>
+      나의 장점
+    </p>
+
+    <div class="skillset">
+      <div class="skillset__left">
+        <h3 class="skillset__title">Skills</h3>
+
+        <div class="skill">
+          <div class="skill__description">
+            <span>JAVA</span>
+            <span>70%</span>
+            <div class="skill__bar">
+              <div class="skill__value">
+              </div>
+            </div>
+            </div>
+        </div>
+
+        <div class="skill">
+          <div class="skill__description">
+            <span>JavaScript</span>
+            <span>70%</span>
+            <div class="skill__bar">
+              <div class="skill__value">
+              </div>
+            </div>
+            </div>
+        </div>
+
+         <div class="skill">
+          <div class="skill__description">
+            <span>REACT</span>
+            <span>70%</span>
+            <div class="skill__bar">
+              <div class="skill__value">
+              </div>
+            </div>
+            </div>
+        </div>
+
+         <div class="skill">
+          <div class="skill__description">
+            <span>Oracle & MySQL</span>
+            <span>70%</span>
+            <div class="skill__bar">
+              <div class="skill__value">
+              </div>
+            </div>
+            </div>
+        </div>
+
+         <div class="skill">
+          <div class="skill__description">
+            <span>Python</span>
+            <span>70%</span>
+            <div class="skill__bar">
+              <div class="skill__value">
+              </div>
+            </div>
+            </div>
+        </div>
+      </div>
+
+
+      <div class="skillset_right">
+        <div class="tools">
+          <h3 class="skillset__title">Tools</h3>
+          <ul class="tools__list">
+            <li><span>Eclipse</span></li>
+            <li><span>IntelliJ</span></li>
+            <li><span>Visual Studio</span></li>
+            <li><span>DBeaver & SQL Developer</span></li>
+          </ul>
+        </div>
+        <div class="Etc">
+          <h3 class="skillset__title">Etc</h3>
+          <ul class="etc__list">
+            <li><span>Git</span></li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </section>
   <!-- Work -->
   <section id="work"></section>
   <!-- Testimonals -->
