HTML(logo, project
change logo size

--- a/index.html
+++ b/index.html
@@ -94,15 +94,6 @@
           <p class="job__name">경기대학교</p>
           <p class="job__period">2015.03 - 2019.02</p>
         </div>
-      <div class="job">
-        <img 
-          src="imgs/jobs/학군단로고.png" 
-          alt="122R" 
-          class="job__logo" 
-          />
-          <p class="job__name">122R ROTC</p>
-          <p class="job__period">2017.03 - 2019.02</p>
-        </div>
 
         <div class="job">
         <img 
@@ -125,6 +116,7 @@
         </div>
     </div>
     </section>
+
   <!-- Skills -->
   <section id="skills">
     <h1>Skills</h1>
@@ -183,7 +175,7 @@
 
          <div class="skill">
           <div class="skill__description">
-            <span>Python</span>
+            <span>HTML & CSS</span>
             <span>70%</span>
             <div class="skill__bar">
               <div class="skill__value">
@@ -204,6 +196,8 @@
             <li><span>DBeaver & SQL Developer</span></li>
           </ul>
         </div>
+
+
         <div class="Etc">
           <h3 class="skillset__title">Etc</h3>
           <ul class="etc__list">
@@ -214,10 +208,80 @@
       </div>
     </div>
   </section>
+
   <!-- Work -->
-  <section id="work"></section>
+  <section id="work">
+    <h1>My Work</h1>
+    <h3>Projects</h3>
+    <div class="work__categories">
+      <button class="category__btn">All<span class="category__count">4</span></button>
+      <button class="category__btn">Front-end<span class="category__count">2</span></button>
+      <button class="category__btn">Back-end<span class="category__count">2</span></button>
+    </div>
+
+    <div class="work__projects">
+      <a 
+        href="https://github.com/LJH0413/Protfolio" 
+        class="project"
+        target="blank"
+        >
+      <img 
+        class="project__img"
+        src="imgs/projects/project4.png" 
+        alt="project">
+      <div class="project__description">
+        <h3>Project1</h3>
+        <span>Project Kosmo</span>
+      </div>
+      </a>
+
+       <a 
+        href="https://github.com/LJH0413/Protfolio" 
+        class="project"
+        target="blank"
+        >
+      <img src="imgs/projects/project4.png" alt="project">
+      <div class="project__description">
+        <h3>Project2</h3>
+        <span>Project Kosmo</span>
+      </div>
+      </a>
+
+       <a 
+        href="https://github.com/LJH0413/Protfolio" 
+        class="project"
+        target="blank"
+        >
+      <img src="imgs/projects/project4.png" alt="project">
+      <div class="project__description">
+        <h3>Project3</h3>
+        <span>Project Kosmo</span>
+      </div>
+      </a>
+
+       <a 
+        href="https://github.com/LJH0413/Protfolio" 
+        class="project"
+        target="blank"
+        >
+      <img src="imgs/projects/project4.png" alt="project">
+      <div class="project__description">
+        <h3>Project4</h3>
+        <span>Project Kosmo</span>
+      </div>
+      </a>
+
+
+    </div>
+  </section>
+
+
   <!-- Testimonals -->
-  <section id="testimonials"></section>
+  <section id="testimonials">
+
+  </section>
+
+
   <!-- Contact -->
   <section id="contact"></section>
   
