--- a/index.html
+++ b/index.html
@@ -278,6 +278,36 @@
 
   <!-- Testimonals -->
   <section id="testimonials">
+    <h1>Testimonials</h1>
+    <h3>See what they say about me</h3>
+    <div class="testimonials">
+      <div class="testimonials">
+        <img 
+          src="imgs/common.jpeg" 
+          alt="mimoticon" 
+          class="testimonials__avatar"
+          />
+          <div class="testimonial__speech-bubble">
+            <p>
+              평가1              
+            </p>
+          </div>
+      </div>
+
+       <div class="testimonials">
+        <img 
+          src="imgs/common.jpeg" 
+          alt="mimoticon" 
+          class="testimonials__avatar"
+          />
+          <div class="testimonial__speech-bubble">
+            <p>
+              평가1              
+            </p>
+          </div>
+      </div>
+    </div>
+
 
   </section>
 
