--- a/index.html
+++ b/index.html
@@ -275,7 +275,6 @@
     </div>
   </section>
 
-
   <!-- Testimonals -->
   <section id="testimonials">
     <h1>Testimonials</h1>
@@ -311,9 +310,24 @@
 
   </section>
 
-
   <!-- Contact -->
-  <section id="contact"></section>
+  <section id="contact">
+    <h1 class="contact__tittle">Let's talk</h1>
+    <h2 class="contact__email">edcdia2@kakao.com</h2>
+    <div class="contact__links">
+      <a href="https://github.com/LJH0413" target="_blank">
+       <i class="fab fa-github-square"></i>
+      </a>
+
+      <a href="https://www.instagram.com/_junvely_/" target="_blank">
+      <i class="fab fa-instagram"></i>
+      </a>
+
+    </div>
+    <p class="contact__rights">
+      2021 LEEJUNHEE - ALL rights reserved
+    </p>
+  </section>
   
 </body>
 </html>
