--- a/index.html
+++ b/index.html
@@ -19,12 +19,6 @@
 </head>
 
 <body>
-
-  <h1>Heading</h1>
-  <h2>Heading</h2>
-  <h3>Heading</h3>
-  <p>Paragraph</p>
-
   <!-- Navbar -->
   <nav id="navbar">
     <div class="navbar_logo">
@@ -32,10 +26,10 @@
       <a href="#">JunHee</a>
      </div>
       <ul class="navbar__menu">
-        <li class="navbar__menu__item">Home</li>
+        <li class="navbar__menu__item active">Home</li>
         <li class="navbar__menu__item">About</li>
         <li class="navbar__menu__item">Skills</li>
-        <li class="navbar__menu__item">MY Wokr</li>
+        <li class="navbar__menu__item">My Work</li>
         <li class="navbar__menu__item">Testimonial</li>
         <li class="navbar__menu__item">Contact</li>
       </ul>
