--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
   <!-- Home -->
   <section id="home">
-    <!-- <img 
-      src="imgs/" //이미지 파일 저장위치
+    <img 
+      src="imgs/avartar.jpg" //이미지 파일 저장위치
       alt="JunHee's protfolio photo" //이미지 파일 설명
       class="home__avatar"
-      /> -->
+      /> 
       <h1 class="home__title">Hello, <br> I'm JunHee</h1>
       <h2 class="home__description">Never give up, Want to be one and only</h2>
       <button class="home__contact">Contact Me</button>
