--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <nav id="navbar">
     <div class="navbar_logo">
       <i class="fas fa-seedling"></i>
-      <a href="#">JunHee</a>
+      <a href="#" style="color: black;">JunHee</a>
      </div>
       <ul class="navbar__menu">
         <li class="navbar__menu__item active">Home</li>
@@ -49,36 +49,37 @@
   </section>
 
   <!-- About -->
-  <section id="about">
+  <section id="about" class="section">
     <h1>About me</h1>
     <p>
-      나의 관한 이야기 작성
+      결과로 과정을 증명하라
     </p> 
     <div class="about__majors">
       <div class="major">
-        <div class="class__icon">
+        <div class="major__icon">
         <i class="fas fa-desktop"></i>
          </div>
         <h2 class="major__title">Front-end</h2>
-        <p class="class__description">
-          HTML, CSS, JavaScript,
+        <p class="major__description">
+          HTML, CSS, JavaScript
         </p>
       </div>
       <div class="major">
-        <div class="class__icon">
+        <div class="major__icon">
        <i class="fas fa-server"></i>
        </div>
         <h2 class="major__title">Back-end</h2>
-        <p class="class__description">
-          Java, Oracle, MySQL, Python, Spring
+        <p class="major__description">
+          Java, Oracle, MySQL,
+          <br/> Python, Spring
         </p>
       </div>
       <div class="major">
-        <div class="class__icon">
+        <div class="major__icon">
         <i class="fas fa-chart-line"></i>
         </div>
         <h2 class="major__title">ability</h2>
-        <p class="class__description">
+        <p class="major__description">
           positive, loyalty, leadership,
           <br /> Crisis Coping Ability
         </p>
@@ -86,33 +87,24 @@
     </div>
     <div class="about__jobs">
         <div class="job">
-          <img 
-          src="imgs/jobs/경기대학교.png" 
-          alt="kyonggiuni" 
-          class="job__logo" 
-          />
-          <p class="job__name">경기대학교</p>
-          <p class="job__period">2015.03 - 2019.02</p>
+          <div class="job__description">
+          <p class="job__name">경기대학교 </p>
+          <p class="job__period">2015. May - 2019. Sept</p>
+           </div>
         </div>
 
         <div class="job">
-        <img 
-          src="imgs/jobs/3사단 로고.png" 
-          alt="3DIV" 
-          class="job__logo" 
-          />
+           <div class="job__description">
           <p class="job__name">제 보병 3사단 (육군 중위 전역)</p>
-          <p class="job__period">2019.06 - 2021.06</p>
+          <p class="job__period">2019. Jun - 2021. Jun</p>
+          </div>
         </div>
 
         <div class="job">
-          <img 
-          src="imgs/jobs/KOSMO.png" 
-          alt="KOSMO" 
-          class="job__logo" 
-          />
+           <div class="job__description">
           <p class="job__name">한국소프트웨어인재개발원</p>
-          <p class="job__period">2021.08 - 2022.02</p>
+          <p class="job__period">2021. Aug - 2022. Sept</p>
+           </div>
         </div>
     </div>
     </section>
