--- a/index.html
+++ b/index.html
@@ -87,31 +87,42 @@
     </div>
     <div class="about__jobs">
         <div class="job">
+          <div class="job__icon">
+            <i class="fas fa-user-graduate"></i>
+          </div>
           <div class="job__description">
-          <p class="job__name">경기대학교 </p>
+          <p class="job__name">경기대학교</p>
           <p class="job__period">2015. May - 2019. Sept</p>
            </div>
         </div>
 
         <div class="job">
+          <div class="job__icon">
+            <i class="far fa-gem"></i>
+          </div>
            <div class="job__description">
-          <p class="job__name">제 보병 3사단 (육군 중위 전역)</p>
-          <p class="job__period">2019. Jun - 2021. Jun</p>
+          <p class="job__name">육군 중위 전역 (학군 57기, 제 3보병사단)</p>
+          <p class="job__period">2017. Fed - 2021. Jun</p>
           </div>
         </div>
 
         <div class="job">
+          <div class="job__icon">
+           <i class="fas fa-school"></i>
+          </div>
            <div class="job__description">
           <p class="job__name">한국소프트웨어인재개발원</p>
           <p class="job__period">2021. Aug - 2022. Sept</p>
            </div>
         </div>
+
     </div>
     </section>
 
   <!-- Skills -->
   <section id="skills">
-    <h1>Skills</h1>
+    <div class="section">
+  <h1>Skills</h1>
     <h2>Skills & Attributes</h2>
     <p>
       나의 장점
@@ -120,15 +131,13 @@
     <div class="skillset">
       <div class="skillset__left">
         <h3 class="skillset__title">Skills</h3>
-
         <div class="skill">
           <div class="skill__description">
             <span>JAVA</span>
             <span>70%</span>
-            <div class="skill__bar">
-              <div class="skill__value">
-              </div>
             </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 70%;"></div>
             </div>
         </div>
 
@@ -136,10 +145,9 @@
           <div class="skill__description">
             <span>JavaScript</span>
             <span>70%</span>
+          </div>
             <div class="skill__bar">
-              <div class="skill__value">
-              </div>
-            </div>
+              <div class="skill__value" style="width: 70%;"></div>
             </div>
         </div>
 
@@ -147,34 +155,32 @@
           <div class="skill__description">
             <span>REACT</span>
             <span>70%</span>
+          </div>
             <div class="skill__bar">
-              <div class="skill__value">
-              </div>
-            </div>
+              <div class="skill__value" style="width: 70%;"></div>
             </div>
         </div>
 
          <div class="skill">
           <div class="skill__description">
             <span>Oracle & MySQL</span>
-            <span>70%</span>
-            <div class="skill__bar">
-              <div class="skill__value">
-              </div>
+            <span>50%</span>
             </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 50%;"></div>
             </div>
         </div>
 
          <div class="skill">
           <div class="skill__description">
             <span>HTML & CSS</span>
-            <span>70%</span>
+            <span>50%</span>
+          </div>
             <div class="skill__bar">
-              <div class="skill__value">
-              </div>
-            </div>
+              <div class="skill__value" style="width: 50%;"></div>
             </div>
         </div>
+
       </div>
 
 
@@ -198,6 +204,8 @@
         </div>
 
       </div>
+    </div>
+      
     </div>
   </section>
 
