--- a/index.html
+++ b/index.html
@@ -210,13 +210,14 @@
   </section>
 
   <!-- Work -->
-  <section id="work">
+  <section id="work" class="section">
     <h1>My Work</h1>
     <h3>Projects</h3>
     <div class="work__categories">
-      <button class="category__btn">All<span class="category__count">4</span></button>
-      <button class="category__btn">Front-end<span class="category__count">2</span></button>
-      <button class="category__btn">Back-end<span class="category__count">2</span></button>
+      <button class="category__btn">All <span class="category__count">5</span></button>
+      <button class="category__btn">Front-end <span class="category__count">2</span></button>
+      <button class="category__btn">Back-end <span class="category__count">2</span></button>
+      <button class="category__btn">Mobile <span class="category__count">1</span></button>
     </div>
 
     <div class="work__projects">
@@ -227,7 +228,7 @@
         >
       <img 
         class="project__img"
-        src="imgs/projects/project4.png" 
+        src="imgs/projects/project6.png" 
         alt="project">
       <div class="project__description">
         <h3>Project1</h3>
@@ -240,7 +241,7 @@
         class="project"
         target="blank"
         >
-      <img src="imgs/projects/project4.png" alt="project">
+      <img src="imgs/projects/project6.png" alt="project">
       <div class="project__description">
         <h3>Project2</h3>
         <span>Project Kosmo</span>
@@ -265,6 +266,18 @@
         target="blank"
         >
       <img src="imgs/projects/project4.png" alt="project">
+      <div class="project__description">
+        <h3>Project4</h3>
+        <span>Project Kosmo</span>
+      </div>
+      </a>
+
+       <a 
+        href="https://github.com/LJH0413/Protfolio" 
+        class="project"
+        target="blank"
+        >
+      <img src="imgs/projects/project7.png" alt="project">
       <div class="project__description">
         <h3>Project4</h3>
         <span>Project Kosmo</span>
