--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Junhee's Portfolio</title>
-  <meta name= "description" content="Portfolio for soft engineer JunHee"> 
-  <meta name="author" content="LJH">
+  <meta 
+    name= "description" 
+    content="Portfolio for soft engineer JunHee"
+    /> 
+  <meta name="author" content="LJH" />
   <link rel='icon' type="image/png" href="imgs/favicon1.png"/> 
-  <script src="https://kit.fontawesome.com/46d3d8cf24.js" 
-          crossorigin="anonymous">
+  <script 
+    src="https://kit.fontawesome.com/46d3d8cf24.js" 
+    crossorigin="anonymous">
   </script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,700&display=swap" 
-    rel="stylesheet">
+    <link 
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,700&display=swap" 
+      rel="stylesheet" />
 
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
@@ -38,18 +44,23 @@
 
   <!-- Home -->
   <section id="home">
+    <div class="home__container"></div>
     <img 
       src="imgs/avartar.jpg" //이미지 파일 저장위치
       alt="JunHee's protfolio photo" //이미지 파일 설명
       class="home__avatar"
       /> 
-      <h1 class="home__title">Hello, <br> I'm JunHee</h1>
-      <h2 class="home__description">Never give up, Want to be one and only</h2>
+      <h1 class="home__title">Hello, <br /> I'm JunHee</h1>
+      <h2 class="home__description">
+        Never give up, Want to be one and only
+      </h2>
       <button class="home__contact">Contact Me</button>
+      </div>
   </section>
 
   <!-- About -->
   <section id="about" class="section">
+    <div class="section__container">
     <h1>About me</h1>
     <p>
       결과로 과정을 증명하라
@@ -117,11 +128,12 @@
         </div>
 
     </div>
+    </div>
     </section>
 
   <!-- Skills -->
-  <section id="skills">
-    <div class="section">
+  <section id="skills" class="section">
+    <div class="section__container">
   <h1>Skills</h1>
     <h2>Skills & Attributes</h2>
     <p>
@@ -211,6 +223,7 @@
 
   <!-- Work -->
   <section id="work" class="section">
+    <div class="section__container">
     <h1>My Work</h1>
     <h3>Projects</h3>
     <div class="work__categories">
@@ -286,56 +299,20 @@
 
 
     </div>
-  </section>
-
-  <!-- Testimonals -->
-  <section id="testimonials">
-    <h1>Testimonials</h1>
-    <h3>See what they say about me</h3>
-    <div class="testimonials">
-      <div class="testimonials">
-        <img 
-          src="imgs/common.jpeg" 
-          alt="mimoticon" 
-          class="testimonials__avatar"
-          />
-          <div class="testimonial__speech-bubble">
-            <p>
-              평가1              
-            </p>
-          </div>
-      </div>
-
-       <div class="testimonials">
-        <img 
-          src="imgs/common.jpeg" 
-          alt="mimoticon" 
-          class="testimonials__avatar"
-          />
-          <div class="testimonial__speech-bubble">
-            <p>
-              평가1              
-            </p>
-          </div>
-      </div>
     </div>
-
-
   </section>
 
   <!-- Contact -->
-  <section id="contact">
+  <section id="contact" class="section">
     <h1 class="contact__tittle">Let's talk</h1>
     <h2 class="contact__email">edcdia2@kakao.com</h2>
     <div class="contact__links">
-      <a href="https://github.com/LJH0413" target="_blank">
-       <i class="fab fa-github-square"></i>
+      <a href="https://github.com/LJH0413" target="blank">
+      <i class="fab fa-github-square"></i>
       </a>
-
-      <a href="https://www.instagram.com/_junvely_/" target="_blank">
+      <a href="https://www.instagram.com/_junvely_/" target="blank">
       <i class="fab fa-instagram"></i>
       </a>
-
     </div>
     <p class="contact__rights">
       2021 LEEJUNHEE - ALL rights reserved
