--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         <li class="navbar__menu__item">Contact</li>
       </ul>
    </div>
+  <!-- navbar toggle -->
+  <button class="navbar__toggle-btn">
+    <i class="fas fa-bars"></i>
+  </button>
   </nav>
 
   <!-- Home -->
@@ -304,8 +308,8 @@
 
   <!-- Contact -->
   <section id="contact" class="section">
-    <h1 class="contact__tittle">Let's talk</h1>
-    <h2 class="contact__email">edcdia2@kakao.com</h2>
+    <h2 class="contact__tittle">Let's talk</h2>
+    <h3 class="contact__email">edcdia2@kakao.com</h3>
     <div class="contact__links">
       <a href="https://github.com/LJH0413" target="blank">
       <i class="fab fa-github-square"></i>
