--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="Ko">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,17 +29,16 @@
   <nav id="navbar">
     <div class="navbar_logo">
       <i class="fas fa-seedling"></i>
-      <a href="#" style="color: black;">JunHee</a>
+      <a href="#" style="color:wheat">JunHee</a>
      </div>
       <ul class="navbar__menu">
-        <li class="navbar__menu__item active">Home</li>
-        <li class="navbar__menu__item">About</li>
-        <li class="navbar__menu__item">Skills</li>
-        <li class="navbar__menu__item">My Work</li>
+        <li class="navbar__menu__item active" data-link="#home">Home</li>
+        <li class="navbar__menu__item" data-link="#about">About</li>
+        <li class="navbar__menu__item" data-link="#skills">Skills</li>
+        <li class="navbar__menu__item" data-link="#work">My Work</li>
         <li class="navbar__menu__item">Testimonial</li>
-        <li class="navbar__menu__item">Contact</li>
+        <li class="navbar__menu__item" data-link="#contact">Contact</li>
       </ul>
-   </div>
   <!-- navbar toggle -->
   <button class="navbar__toggle-btn">
     <i class="fas fa-bars"></i>
