--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <a href="#" style="color:wheat">JunHee</a>
      </div>
       <ul class="navbar__menu">
-        <li class="navbar__menu__item active" data-link="#home">Home</li>
+        <li class="navbar__menu__item active"data-link="#home">Home</li>
         <li class="navbar__menu__item" data-link="#about">About</li>
         <li class="navbar__menu__item" data-link="#skills">Skills</li>
         <li class="navbar__menu__item" data-link="#work">My Work</li>
-        <li class="navbar__menu__item">Testimonial</li>
+        <!-- <li class="navbar__menu__item">Testimonial</li> -->
         <li class="navbar__menu__item" data-link="#contact">Contact</li>
       </ul>
   <!-- navbar toggle -->
