--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
 
   <!-- Contact -->
   <section id="contact" class="section">
+     <div class="section__container">
     <h2 class="contact__tittle">Let's talk</h2>
     <h3 class="contact__email">edcdia2@kakao.com</h3>
     <div class="contact__links">
@@ -320,7 +321,13 @@
     <p class="contact__rights">
       2021 LEEJUNHEE - ALL rights reserved
     </p>
+    </div>
   </section>
-  
+
+  <!-- Arrow Up -->
+  <button class="arrow__up">
+  <i class="fas fa-arrow-up"></i>
+  </button>
+ 
 </body>
 </html>
