--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
     <div class="work__projects">
       <a 
-        href="https://github.com/LJH0413/Protfolio" 
+        href="https://ljh0413.github.io/Protfolio/" 
         class="project"
         target="blank"
         data-type="front-end"
