--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <div class="Etc">
           <h3 class="skillset__title">Etc</h3>
           <ul class="etc__list">
-            <li><span>Git</span></li>
+            <li><span>Git, github, docker</span></li>
           </ul>
         </div>
 
