--- a/index.html
+++ b/index.html
@@ -264,16 +264,18 @@
       </div>
       </a>
 
+      
+
        <a 
-        href="https://github.com/LJH0413/Protfolio" 
+        href="https://github.com/LJH0413/cafeOttimo.git" 
         class="project"
         target="blank"
         data-type="front-end"
         >
-      <img src="imgs/projects/project6.png" alt="project">
+      <img src="imgs/projects/Ottimo.png" alt="project">
       <div class="project__description">
-        <h2>Project1</h2>
-        <span>Project Kosmo</span>
+        <h2>개인 프로젝트</h2>
+        <span>오띠모 카페 사이트</span>
       </div>
       </a>
 
