ottimo image change

--- a/index.html
+++ b/index.html
@@ -272,7 +272,10 @@
         target="blank"
         data-type="front-end"
         >
-      <img src="imgs/projects/Ottimo.png" alt="project">
+      <img 
+          class="project__img"
+          src="imgs/projects/ottimo.png" 
+          alt="project">
       <div class="project__description">
         <h2>개인 프로젝트</h2>
         <span>오띠모 카페 사이트</span>
@@ -285,7 +288,7 @@
         target="blank"
         data-type="back-end"
         >
-      <img src="imgs/projects/project4.png" alt="project">
+      <img class="project__img" src="imgs/projects/project4.png" alt="project">
       <div class="project__description">
         <h2>Project2</h2>
         <span>Project Kosmo</span>
@@ -298,7 +301,7 @@
         target="blank"
         data-type="back-end"
         >
-      <img src="imgs/projects/project4.png" alt="project">
+      <img class="project__img" src="imgs/projects/project4.png" alt="project">
       <div class="project__description">
         <h2>Project3</h2>
         <span>Project Kosmo</span>
@@ -311,7 +314,7 @@
         target="blank"
         data-type="mobile"
         >
-      <img src="imgs/projects/project7.png" alt="project">
+      <img class="project__img" src="imgs/projects/project7.png" alt="project">
       <div class="project__description">
         <h2>Project4</h2>
         <span>Project Kosmo</span>
