Ottimo img change

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         >
       <img 
           class="project__img"
-          src="imgs/projects/ottimo.png" 
+          src="imgs/projects/Ottimo-3.png" 
           alt="project">
       <div class="project__description">
         <h2>개인 프로젝트</h2>
@@ -283,7 +283,7 @@
       </a>
 
        <a 
-        href="https://github.com/LJH0413/Protfolio" 
+        href="" 
         class="project"
         target="blank"
         data-type="back-end"
@@ -296,7 +296,7 @@
       </a>
 
        <a 
-        href="https://github.com/LJH0413/Protfolio" 
+        href="" 
         class="project"
         target="blank"
         data-type="back-end"
@@ -309,7 +309,7 @@
       </a>
 
        <a 
-        href="https://github.com/LJH0413/Protfolio" 
+        href="" 
         class="project"
         target="blank"
         data-type="mobile"
