--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         >
       <img 
           class="project__img"
-          src="imgs/projects/Ottimo-3.png" 
+          src="./imgs/projects/Ottimo-3.png" 
           alt="project">
       <div class="project__description">
         <h2>개인 프로젝트</h2>
