--- a/index.html
+++ b/index.html
@@ -274,11 +274,13 @@
         >
       <img 
           class="project__img"
-          src="./imgs/projects/Ottimo-3.png" 
+          src="imgs/projects/Ottimo-3.png" 
           alt="project">
       <div class="project__description">
         <h2>개인 프로젝트</h2>
-        <span>오띠모 카페 사이트</span>
+        <span>
+          오띠모 카페 사이트
+        </span>
       </div>
       </a>
 
@@ -340,7 +342,7 @@
       </a>
     </div>
     <p class="contact__rights">
-      2021 LEEJUNHEE - ALL rights reserved
+      ⓒ 2021. LEEJUNHEE all rights reserved.
     </p>
     </div>
   </section>
