--- a/index.html
+++ b/index.html
@@ -290,10 +290,10 @@
         target="blank"
         data-type="back-end"
         >
-      <img class="project__img" src="imgs/projects/project4.png" alt="project">
+      <img class="project__img" src="imgs/projects/wheremyshoe.png" alt="project">
       <div class="project__description">
-        <h2>Project2</h2>
-        <span>Project Kosmo</span>
+        <h2>한정판 신발 거래 사이트</h2>
+        <span>Where`s My Shoe</span>
       </div>
       </a>
 
