--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       /> 
       <h1 class="home__title">Hello, <br /> I'm JunHee</h1>
       <h2 class="home__description">
-        Never give up, Want to be one and only
+        무너질지언정 포기하지 않는다.
       </h2>
       <button class="home__contact">Contact Me</button>
       </div>
@@ -66,7 +66,7 @@
     <div class="section__container">
     <h1>About me</h1>
     <p>
-      결과로 과정을 증명하라
+      생각을 구현하자!
     </p> 
     <div class="about__majors">
       <div class="major">
@@ -179,23 +179,32 @@
          <div class="skill">
           <div class="skill__description">
             <span>Oracle & MySQL</span>
-            <span>50%</span>
+            <span>70%</span>
             </div>
             <div class="skill__bar">
-              <div class="skill__value" style="width: 50%;"></div>
+              <div class="skill__value" style="width: 70%;"></div>
             </div>
         </div>
 
          <div class="skill">
           <div class="skill__description">
             <span>HTML & CSS</span>
+            <span>70%</span>
+          </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 70%;"></div>
+            </div>
+        </div>
+
+         <div class="skill">
+          <div class="skill__description">
+            <span>JSP & SPRING</span>
             <span>50%</span>
           </div>
             <div class="skill__bar">
               <div class="skill__value" style="width: 50%;"></div>
             </div>
-        </div>
-
+      </div>
       </div>
 
 
@@ -231,16 +240,16 @@
     <h3>Projects</h3>
     <div class="work__categories">
       <button class="category__btn selected" data-filter="*">
-        All <span class="category__count">5</span>
+        All <span class="category__count">4</span>
       </button>
       <button class="category__btn" data-filter="front-end">
-        Front-end <span class="category__count">2</span>
+        Front-end <span class="category__count">3</span>
       </button>
       <button class="category__btn" data-filter="back-end">
-        Back-end <span class="category__count">2</span>
+        Back-end <span class="category__count">1</span>
       </button>
       <button class="category__btn" data-filter="mobile">
-        Mobile <span class="category__count">1</span>
+        Mobile <span class="category__count">0</span>
       </button>
     </div>
 
@@ -285,14 +294,14 @@
       </a>
 
        <a 
-        href="" 
+        href="https://ljh0413.github.io/MyShoes/" 
         class="project"
         target="blank"
-        data-type="back-end"
+        data-type="front-end"
         >
       <img class="project__img" src="imgs/projects/wheremyshoe.png" alt="project">
       <div class="project__description">
-        <h2>한정판 신발 거래 사이트</h2>
+        <h2>개인프로젝트</h2>
         <span>Where`s My Shoe</span>
       </div>
       </a>
@@ -303,10 +312,10 @@
         target="blank"
         data-type="back-end"
         >
-      <img class="project__img" src="imgs/projects/project4.png" alt="project">
+      <img class="project__img" src="imgs/projects/jsp_board.png" alt="project">
       <div class="project__description">
-        <h2>Project3</h2>
-        <span>Project Kosmo</span>
+        <h2>개인프로젝트</h2>
+        <span>JSP BOARD</span>
       </div>
       </a>
 
