--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
             <i class="far fa-gem"></i>
           </div>
            <div class="job__description">
-          <p class="job__name">육군 중위 전역 (학군 57기, 제 3보병사단)</p>
+          <p class="job__name">육군 중위 전역 (학군 57기, 제 3보병사단)
+            <br> - 소대장, 본부중대장, 군수과장, 화기중대 부중대장 임무 수행
+          </p>
           <p class="job__period">2017. Fed - 2021. Jun</p>
           </div>
         </div>
