--- a/index.html
+++ b/index.html
@@ -242,13 +242,13 @@
     <h3>Projects</h3>
     <div class="work__categories">
       <button class="category__btn selected" data-filter="*">
-        All <span class="category__count">4</span>
+        All <span class="category__count">7</span>
       </button>
       <button class="category__btn" data-filter="front-end">
-        Front-end <span class="category__count">3</span>
+        Front-end <span class="category__count">5</span>
       </button>
       <button class="category__btn" data-filter="back-end">
-        Back-end <span class="category__count">1</span>
+        Back-end <span class="category__count">2</span>
       </button>
       <button class="category__btn" data-filter="mobile">
         Mobile <span class="category__count">0</span>
@@ -309,7 +309,33 @@
       </a>
 
        <a 
-        href="" 
+        href="hhttps://ljh0413.github.io/Nonfiction_fanpage/" 
+        class="project"
+        target="blank"
+        data-type="front-end"
+        >
+      <img class="project__img" src="imgs/projects/nonfiction.png" alt="project">
+      <div class="project__description">
+        <h2>개인프로젝트</h2>
+        <span>Nonfiction pan page</span>
+      </div>
+      </a>
+
+      <a 
+        href="hhttps://ljh0413.github.io/Nonfiction_fanpage/" 
+        class="project"
+        target="blank"
+        data-type="front-end"
+        >
+      <img class="project__img" src="imgs/projects/study_ani.png" alt="project">
+      <div class="project__description">
+        <h2>개인프로젝트</h2>
+        <span>animation study</span>
+      </div>
+      </a>
+
+       <a 
+        href="https://github.com/LJH0413/Study_JSP_Spring" 
         class="project"
         target="blank"
         data-type="back-end"
@@ -318,6 +344,19 @@
       <div class="project__description">
         <h2>개인프로젝트</h2>
         <span>JSP BOARD</span>
+      </div>
+      </a>
+
+      <a 
+        href="https://github.com/LJH0413/Study_JSP_Spring" 
+        class="project"
+        target="blank"
+        data-type="back-end"
+        >
+      <img class="project__img" src="imgs/projects/jsp_shop.png" alt="project">
+      <div class="project__description">
+        <h2>개인프로젝트</h2>
+        <span>JSP Shop</span>
       </div>
       </a>
 
