--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       
 
        <a 
-        href="https://github.com/LJH0413/cafeOttimo.git" 
+        href="https://ljh0413.github.io/cafeOttimo/" 
         class="project"
         target="blank"
         data-type="front-end"
@@ -309,7 +309,7 @@
       </a>
 
        <a 
-        href="hhttps://ljh0413.github.io/Nonfiction_fanpage/" 
+        href="https://ljh0413.github.io/Nonfiction_fanpage/" 
         class="project"
         target="blank"
         data-type="front-end"
