add React study

--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@
     <h3>Projects</h3>
     <div class="work__categories">
       <button class="category__btn selected" data-filter="*">
-        All <span class="category__count">7</span>
+        All <span class="category__count">8</span>
       </button>
       <button class="category__btn" data-filter="front-end">
-        Front-end <span class="category__count">5</span>
+        Front-end <span class="category__count">6</span>
       </button>
       <button class="category__btn" data-filter="back-end">
         Back-end <span class="category__count">2</span>
@@ -333,6 +333,25 @@
         <span>animation study</span>
       </div>
       </a>
+
+      <a 
+        href="https://ljh0413.github.io/cafeOttimo/" 
+        class="project"
+        target="blank"
+        data-type="front-end"
+        >
+      <img 
+          class="project__img"
+          src="imgs/projects/todo_list.png" 
+          alt="project">
+      <div class="project__description">
+        <h2>개인 프로젝트</h2>
+        <span>
+          React Todo-List
+        </span>
+      </div>
+      </a>
+
 
        <a 
         href="https://github.com/LJH0413/Study_JSP_Spring" 
