--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
       </a>
 
       <a 
-        href="https://ljh0413.github.io/cafeOttimo/" 
+        href="https://github.com/LJH0413/Study_React" 
         class="project"
         target="blank"
         data-type="front-end"
