add project and study

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
          </div>
         <h2 class="major__title">Front-end</h2>
         <p class="major__description">
-          HTML, CSS, JavaScript
+          HTML, CSS, JavaScript 
+          <br> JQuery, React
         </p>
       </div>
       <div class="major">
@@ -94,7 +95,7 @@
         </div>
         <h2 class="major__title">ability</h2>
         <p class="major__description">
-          positive, loyalty, leadership,
+          Positive, Loyalty, Leadership,
           <br /> Crisis Coping Ability
         </p>
       </div>
@@ -218,6 +219,7 @@
             <li><span>IntelliJ</span></li>
             <li><span>Visual Studio</span></li>
             <li><span>DBeaver & SQL Developer</span></li>
+            <li><span>postman</span></li>
           </ul>
         </div>
 
@@ -226,6 +228,7 @@
           <h3 class="skillset__title">Etc</h3>
           <ul class="etc__list">
             <li><span>Git, github, docker</span></li>
+            <li><span>mongo DB</span></li>
           </ul>
         </div>
 
@@ -242,7 +245,7 @@
     <h3>Projects</h3>
     <div class="work__categories">
       <button class="category__btn selected" data-filter="*">
-        All <span class="category__count">8</span>
+        All <span class="category__count">10</span>
       </button>
       <button class="category__btn" data-filter="front-end">
         Front-end <span class="category__count">6</span>
@@ -250,8 +253,8 @@
       <button class="category__btn" data-filter="back-end">
         Back-end <span class="category__count">2</span>
       </button>
-      <button class="category__btn" data-filter="mobile">
-        Mobile <span class="category__count">0</span>
+      <button class="category__btn" data-filter="fullstack">
+        fullstack <span class="category__count">2</span>
       </button>
     </div>
 
@@ -379,21 +382,95 @@
       </div>
       </a>
 
-       <a 
-        href="" 
+      <a 
+        href="https://github.com/LJH0413/Study_Map_API" 
         class="project"
         target="blank"
-        data-type="mobile"
+        data-type="fullstack"
         >
-      <img class="project__img" src="imgs/projects/project7.png" alt="project">
+      <img 
+          class="project__img"
+          src="imgs/projects/map.png" 
+          alt="project">
       <div class="project__description">
-        <h2>Project4</h2>
-        <span>Project Kosmo</span>
+        <h2>개인 프로젝트</h2>
+        <span>
+          Map API study
+        </span>
       </div>
       </a>
 
-
+        <a 
+        href="#" 
+        class="project"
+        target="blank"
+        data-type="fullstack"
+        >
+      <img class="project__img" src="imgs/projects/kosmo_Team.png" alt="project">
+      <div class="project__description">
+        <h2>팀 프로젝트</h2>
+        <span>kosmo team</span>
+      </div>
+      </a>
     </div>
+    </div>
+  </section>
+
+  <section id="study" class="section">
+    <h1>My Study</h1>
+    <h3>Programming Study</h3>
+    <div class="section__container">
+      <br><br>
+    <div class="Html AND Css">
+      <h2>HTML & CSS Study</h2>
+      <a href="https://ljh0413.github.io/Study_HTML_CSS/"><span>Go to HTML & CSS Study</span></a>
+    </div>
+    <hr />
+
+    <div class="JavaScript AND JQuery">
+      <h2>JavaScript & JQuery Study</h2>
+      <a href="https://ljh0413.github.io/Study_JavaScript_jQuery/"
+        ><span>Go to JavaScript & JQuery Study</span></a
+      >
+    </div>
+    <hr />
+
+    <div class="Java">
+      <h2>JAVA Study</h2>
+      <a href="https://github.com/LJH0413/Study_Java" target="blank"
+        ><span>Go to JAVA Study</span></a
+      >
+    </div>
+    <hr />
+    
+
+    <div class="JSP AND SPRING">
+      <h2>JSP & SPRING Study</h2>
+      <a href="https://github.com/LJH0413/Study_JSP_Spring/"
+        ><span>Go to JSP & SPRING Study</span></a
+      >
+    </div>
+    <hr />
+    
+    <div class="DataBase">
+      <h2>DataBase(MY SQL) Study</h2>
+      <a href="https://github.com/LJH0413/Study_DataBase" target="blank"
+        ><span>Go to DataBase(MY SQL) Study</span></a
+      >
+    </div>
+    <hr />
+
+    <div class="NODEJS">
+      <h2>node.js Study</h2>
+      <a href="https://github.com/LJH0413/Study_node.js"
+        ><span>Go to node.js Study</span></a
+      >
+    </div>
+    <hr />
+
+
+
+
     </div>
   </section>
 
