--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       </a>
 
       <a 
-        href="hhttps://ljh0413.github.io/Nonfiction_fanpage/" 
+        href="https://ljh0413.github.io/Study_animation/" 
         class="project"
         target="blank"
         data-type="front-end"
