--- a/index.html
+++ b/index.html
@@ -245,13 +245,13 @@
     <h3>Projects</h3>
     <div class="work__categories">
       <button class="category__btn selected" data-filter="*">
-        All <span class="category__count">10</span>
+        All <span class="category__count">11</span>
       </button>
       <button class="category__btn" data-filter="front-end">
         Front-end <span class="category__count">6</span>
       </button>
       <button class="category__btn" data-filter="back-end">
-        Back-end <span class="category__count">2</span>
+        Back-end <span class="category__count">3</span>
       </button>
       <button class="category__btn" data-filter="fullstack">
         fullstack <span class="category__count">2</span>
@@ -379,6 +379,19 @@
       <div class="project__description">
         <h2>개인프로젝트</h2>
         <span>JSP Shop</span>
+      </div>
+      </a>
+
+      <a 
+        href="https://github.com/LJH0413/Study_JSP_Spring/tree/main/Spring/BoardWeb" 
+        class="project"
+        target="blank"
+        data-type="back-end"
+        >
+      <img class="project__img" src="imgs/projects/Spring_Board.png" alt="project">
+      <div class="project__description">
+        <h2>개인프로젝트</h2>
+        <span>Spring board</span>
       </div>
       </a>
 
